Change for h1 tag

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>This is version 6</h1>
+    <h1>This is design for version 6</h1>
     <h1>Kalpesh B. Patel</h1>
 </body>
 </html>
